There are now 4 fields per row, and they have a minimum width to prevent them from running on top of each other on smaller windown widths

--- a/src/components/Panel/EntitiesDetails/BaseDetails.scss
+++ b/src/components/Panel/EntitiesDetails/BaseDetails.scss
@@ -96,7 +96,8 @@
 
 .details-panel__columns {
   .details-panel__fieldset {
-    width: 50%;
+    width: 25%;
+    min-width: 320px;
     float: left;
   }
 }
